// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup renders correctly 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="css-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":r1:"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r1:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":r3:"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r3:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with direction row 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-4lkpn5-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="css-4lkpn5-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":rb:"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rb:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":rd:"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rd:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with error content 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="css-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":rm:"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rm:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":ro:"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":ro:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <span
      class="css-vdlwt8-StyledText e13y3mga0"
    >
      Eror content
    </span>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with helper content 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

.css-ioay7l-StyledText {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="css-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":rg:"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rg:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":ri:"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":ri:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
    <span
      class="css-ioay7l-StyledText e13y3mga0"
    >
      Helper content
    </span>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with no CheckboxGroup.Checkbox name 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
        </legend>
        <div
          class="css-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":r6:"
              name="Checkbox."
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r6:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":r8:"
              name="Checkbox."
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":r8:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`CheckboxGroup renders correctly with required prop 1`] = `
<DocumentFragment>
  .css-gw33n2-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-103llo5-FieldSet {
  border: none;
  padding: 0;
  margin: 0;
}

.css-oey408-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-zvclys-StyledText {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-kmv3js-sizeStyles-StyledRequiredIcon {
  vertical-align: middle;
  fill: #b3144d;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
  vertical-align: super;
}

.css-kmv3js-sizeStyles-StyledRequiredIcon .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.css-1ujdb3w-CheckboxContainer {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  gap: 8px;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq3 {
  cursor: pointer;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq3 {
  cursor: not-allowed;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 {
  fill: #e9eaeb;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq4 .eqr7bqq6 {
  stroke: #d9dadd;
  fill: #f3f3f4;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 {
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffd3e3;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #ffbbd3;
  fill: #ffebf2;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d8c5fc;
  fill: #d8c5fc;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 {
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer[aria-disabled='true'] .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e5dbfd;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 path {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]:checked+.eqr7bqq4 .eqr7bqq6 {
  fill: #e51963;
  stroke: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq5 {
  fill: #ffffff;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-checked="mixed"]+.eqr7bqq4 .eqr7bqq6 {
  fill: #8c40ef;
  stroke: #8c40ef;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='false'][aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #792dd4;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='false']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1ujdb3w-CheckboxContainer:hover[aria-disabled='false'] .eqr7bqq2[aria-invalid='true'][aria-checked='true']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #d6175c;
  fill: #d6175c;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 {
  fill: #e51963;
}

.css-1ujdb3w-CheckboxContainer .eqr7bqq2[aria-invalid="true"]+.eqr7bqq4 .eqr7bqq6 {
  stroke: #e51963;
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.css-1jd075o-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.css-1jd075o-CheckboxInput:disabled {
  cursor: not-allowed;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 {
  fill: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled):checked+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-checked='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #8c40ef;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 {
  fill: #ffebf2;
}

.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='true']+.eqr7bqq4 .eqr7bqq6,
.css-1jd075o-CheckboxInput:not(:disabled)[aria-invalid='mixed']+.eqr7bqq4 .eqr7bqq6 {
  stroke: #b3144d;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 {
  background-color: #f1eefc;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #8c40ef40;
}

.css-1jd075o-CheckboxInput:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #792dd4;
  fill: #e5dbfd;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 {
  background-color: #ffebf2;
  fill: #ffebf2;
  outline: 1px solid 0px 0px 0px 3px #f91b6c40;
}

.css-1jd075o-CheckboxInput[aria-invalid='true']:focus+.eqr7bqq4 .eqr7bqq6 {
  stroke: #92103f;
  fill: #ffd3e3;
}

.css-1acemqq-StyledIcon {
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.css-1acemqq-StyledIcon path {
  fill: #ffffff;
  -webkit-transform: translate(2px, 2px);
  -moz-transform: translate(2px, 2px);
  -ms-transform: translate(2px, 2px);
  transform: translate(2px, 2px);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.css-1t9py5o-InnerCheckbox {
  fill: #ffffff;
  stroke: #d9dadd;
}

.css-10ivylf-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-17l4vsh-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-9k0c1e-StyledLabel {
  width: 100%;
}

<div
    class="css-gw33n2-Stack ehpbis70"
  >
    <fieldset
      class="css-103llo5-FieldSet e1k5uyng1"
    >
      <div
        class="css-oey408-Stack ehpbis70"
      >
        <legend
          class="css-zvclys-StyledText e13y3mga0"
        >
          Label 
          <svg
            class="e1k5uyng0 css-kmv3js-sizeStyles-StyledRequiredIcon e1gt4cfo0"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
            />
          </svg>
        </legend>
        <div
          class="css-gw33n2-Stack ehpbis70"
        >
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":rs:"
              name="Checkbox.value-1"
              type="checkbox"
              value="value-1"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":rs:"
                >
                  Checkbox 1
                </label>
              </div>
            </div>
          </div>
          <div
            aria-disabled="false"
            class="css-1ujdb3w-CheckboxContainer eqr7bqq1"
            data-checked="false"
            data-error="false"
          >
            <input
              aria-checked="false"
              aria-invalid="false"
              class="css-1jd075o-CheckboxInput eqr7bqq2"
              id=":ru:"
              name="Checkbox.value-2"
              type="checkbox"
              value="value-2"
            />
            <svg
              class="css-1acemqq-StyledIcon eqr7bqq4"
              fill="none"
              size="24"
              viewBox="0 0 24 24"
            >
              <g>
                <rect
                  class="css-1t9py5o-InnerCheckbox eqr7bqq6"
                  height="16"
                  rx="2px"
                  stroke-width="2"
                  width="16"
                  x="4"
                  y="4"
                />
                <path
                  clip-rule="evenodd"
                  d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                  fill="white"
                  fill-rule="evenodd"
                  height="9"
                  width="12"
                  x="5"
                  y="4"
                />
              </g>
            </svg>
            <div
              class="css-10ivylf-Stack ehpbis70"
            >
              <div
                class="css-17l4vsh-Stack ehpbis70"
              >
                <label
                  class="css-9k0c1e-StyledLabel eqr7bqq3"
                  for=":ru:"
                >
                  Checkbox 2
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;
